fixed some spacing

--- a/style.css
+++ b/style.css
@@ -4,8 +4,8 @@
 }
 .container {
     background-color: darkslategrey;
-    width: 800px;
-    padding: 0.1%;
+    width: 720px;
+    padding: 0.25%;
 }
 .heading {
     text-align: center;
